--- a/App.css
+++ b/App.css
@@ -38,12 +38,19 @@
 }
 /* ============================== */
 /* 점보트론 */
-.jumboBackground {
+.background {
   background-color: rgba(16, 17, 17, 0.239);
   color: white;
-  text-align: left;
+  text-align: center;
+  font-size: 2rem;
   padding: 50px 0px;
   padding-left: 50px;
   background-image : url(./images/backimage.jpg);
   background-position : center;
+  background-size: cover;
+}
+
+.background hr {
+  height: 10px;
+  background-color: white;
 }
